<resources>
    <string name="app_name">klinelib</string>
    <string name="loading">加载中</string>


    <string name="price">价格</string>
    <string name="change_rate">涨跌幅</string>
    <string name="volume">成交量</string>

    <string name="open_price">开盘价</string>
    <string name="close_price">收盘价</string>
    <string name="high_price">最高价</string>
    <string name="low_price">最低价</string>
</resources>
