<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/chart_info_color">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/axis_color"
        android:textSize="12sp"
        android:padding="4dp"
        tools:text="201511111"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/axis_color"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/axis_color"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/change_rate"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/axis_color"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_change_rate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/axis_color"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/volume"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/axis_color"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_vol"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/axis_color"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>